kubernetes/apps/media/jellyfin/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-apps-jellyfin-httproute
  annotations:
    gatus.home-operations.com/endpoint: |-
      name: Jellyfin
spec:
  hostnames:
    - "jelly.${SECRET_DOMAIN}"
  parentRefs:
    - name: external-direct
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: jellyfin-app
          namespace: media
          port: 8096
    - backendRefs:
        - name: jellyfin-jellysearch
          namespace: media
          port: 5000
      matches:
        - queryParams:
            - type: RegularExpression
              name: "searchTerm"
              value: "^.*$"
